# mini-shell

./: CMakeLists.txt  README.md
docs/features/pipeline/: feature-pipeline.md
include/core/: handlePipe.hpp
include/execution/: externalCommands.hpp  pipelineCommands.hpp
include/execution/built-ins/: builtCd.hpp  builtExit.hpp  builtHistory.hpp
include/parser/: pipeParser.hpp  tokenize.hpp
include/utils/: hasPipe.hpp
notes/: README.md
notes/pipe/: pipe.md  pipelineExecution.md
src/: main.cpp
src/core/: dispatcher.cpp  shell.cpp
src/execution/: externalCommands.cpp  handlePipe.cpp  hasPipe.cpp  pipelineCommands.cpp
src/execution/built-ins/: builtCd.cpp  builtExit.cpp  builtHistory.cpp
src/parser/: pipeParser.cpp  tokenize.cpp
src/utils/: getInternMap.cpp  hasPipe.cpp
tests/: pipe.cpp
